# url-shortener

./: Cargo.toml  Procfile
migrations/2020-12-20-141933_create_urls/: up.sql
src/: actions.rs  main.rs  models.rs  routes.rs  schema.rs  url_shortener.rs
static/: index.html  main.js
