[package]
name = "url_shortener"
version = "0.1.0"
authors = ["iche <me@iche.eu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3"
actix-files = "0.3"
serde = { version = "1.0", features = ["derive"] }
diesel = { version = "1.4.6", features = ["postgres", "r2d2"] }
env_logger = "0.8.1"
dotenv = "0.15.0"
